--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -1,3 +1,6 @@
+management.security.enabled=false
+server.port=9092
+
 #management:
 #  security:
 #    enabled: false
@@ -7,7 +10,7 @@
 #        include: "*"
 #
 #server:
-#  port:
+#  port: 9092
 #spring:
 #  cloud:
 #    stream:
