--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,33 +1,33 @@
-spring:
-  cloud:
-    config:
-      uri: http://localhost:9091
-  application:
-    name: zola
-  profiles: dev
-server:
-  address: 127.0.0.1
-
----
-
-spring:
-  cloud:
-    config:
-      uri: http://localhost:9091
-  application:
-    name: zola
-  profiles: uat
-server:
-  address: 127.0.0.1
-
----
-
-spring:
-  cloud:
-    config:
-      uri: http://localhost:9091
-  application:
-    name: zola
-  profiles: prod
-server:
-  address: 127.0.0.1
+#spring:
+#  cloud:
+#    config:
+#      uri: http://localhost:9091
+#  application:
+#    name: zola
+##  profiles: dev
+##server:
+##  address: 127.0.0.1
+#
+#---
+#
+#spring:
+#  cloud:
+#    config:
+#      uri: http://localhost:9091
+#  application:
+#    name: zola
+##  profiles: uat
+##server:
+##  address: 127.0.0.1
+#
+#---
+#
+#spring:
+#  cloud:
+#    config:
+#      uri: http://localhost:9091
+#  application:
+#    name: zola
+##  profiles: prod
+##server:
+##  address: 127.0.0.1
